--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.2.0",
     "lodash": "^4.17.5",
-    "mongoose": "^5.0.12"
+    "mongoose": "^5.0.12",
+    "socket.io": "^2.1.0"
   }
 }
