--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "forever-monitor": "^1.7.1",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
     "mongoose": "^5.0.15",
+    "mysql": "^2.15.0",
+    "nanoseconds": "^1.0.1",
     "redis": "^2.8.0",
     "socket.io": "^2.1.0",
     "uuid": "^3.2.1",
